[gd_scene load_steps=6 format=3 uid="uid://dwcgpv3spo0lu"]

[ext_resource type="Script" uid="uid://b2u2cdw05so75" path="res://Sample/polyrhythm_result_scene.gd" id="1_ywhj5"]
[ext_resource type="Material" uid="uid://dykh6lk1hfo2u" path="res://Menu Shaders/Asset_Color.tres" id="2_wrgtb"]
[ext_resource type="Texture2D" uid="uid://ce5cmnitbtulq" path="res://Menu Assets/black square.png" id="3_14hqq"]
[ext_resource type="FontFile" uid="uid://bsdm1pj7st7rm" path="res://Font/Modular Amplitude.otf" id="4_72020"]
[ext_resource type="AudioStream" uid="uid://dk57nyfbj42mm" path="res://Audio/select_sound.wav" id="5_6c85i"]

[node name="PolyrhythmResultScene" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = -960.0
offset_bottom = -540.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ywhj5")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_left = -158.0
offset_top = -62.0
offset_right = 2178.0
offset_bottom = 1179.0
color = Color(1, 0.752941, 0.145098, 1)
metadata/_edit_lock_ = true

[node name="bg2" type="TextureRect" parent="."]
material = ExtResource("2_wrgtb")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -158.0
offset_top = -62.0
offset_right = 1980.0
offset_bottom = 1131.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_14hqq")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 299.0
offset_top = 24.0
offset_right = 1712.0
offset_bottom = 1049.0
theme_override_constants/separation = 90
metadata/_edit_lock_ = true

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
material = ExtResource("2_wrgtb")
layout_mode = 2
theme_override_fonts/font = ExtResource("4_72020")
theme_override_font_sizes/font_size = 100
text = "Challenge Complete!"
horizontal_alignment = 1

[node name="HitsLabel" type="Label" parent="VBoxContainer"]
material = ExtResource("2_wrgtb")
layout_mode = 2
theme_override_fonts/font = ExtResource("4_72020")
theme_override_font_sizes/font_size = 70
text = "total Hits:"

[node name="AccuracyLabel" type="Label" parent="VBoxContainer"]
material = ExtResource("2_wrgtb")
layout_mode = 2
theme_override_fonts/font = ExtResource("4_72020")
theme_override_font_sizes/font_size = 70
text = "Hit % :"

[node name="MissesLabel" type="Label" parent="VBoxContainer"]
material = ExtResource("2_wrgtb")
layout_mode = 2
theme_override_fonts/font = ExtResource("4_72020")
theme_override_font_sizes/font_size = 70
text = "Miss:"

[node name="GradeLabel" type="Label" parent="VBoxContainer"]
material = ExtResource("2_wrgtb")
layout_mode = 2
theme_override_fonts/font = ExtResource("4_72020")
theme_override_font_sizes/font_size = 70
text = "Grade: "

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 300
alignment = 1

[node name="MenuButton" type="Button" parent="VBoxContainer/HBoxContainer"]
material = ExtResource("2_wrgtb")
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("4_72020")
theme_override_font_sizes/font_size = 90
text = "MAIN MENU"
flat = true

[node name="ClickSoundPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_6c85i")

[node name="HitsValue" type="Label" parent="."]
layout_mode = 0
offset_left = 821.0
offset_top = 223.0
offset_right = 2234.0
offset_bottom = 297.0
theme_override_fonts/font = ExtResource("4_72020")
theme_override_font_sizes/font_size = 70
text = "0"

[node name="AccuracyValue" type="Label" parent="."]
layout_mode = 0
offset_left = 582.0
offset_top = 387.0
offset_right = 1995.0
offset_bottom = 461.0
theme_override_fonts/font = ExtResource("4_72020")
theme_override_font_sizes/font_size = 70
text = "0"

[node name="MissesValue" type="Label" parent="."]
layout_mode = 0
offset_left = 539.0
offset_top = 551.0
offset_right = 1952.0
offset_bottom = 625.0
theme_override_fonts/font = ExtResource("4_72020")
theme_override_font_sizes/font_size = 70
text = "0"

[node name="GradeValue" type="Label" parent="."]
layout_mode = 0
offset_left = 605.0
offset_top = 715.0
offset_right = 2018.0
offset_bottom = 789.0
theme_override_fonts/font = ExtResource("4_72020")
theme_override_font_sizes/font_size = 70
text = "0"
